# aegis-marketing-cloud

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  cd.yml  ci.yml  docker-ci.yml  frontend-ci.yml  security.yml
.hermes/: compliance-plan.md
deployment/: docker-compose.override.yml  docker-compose.yml  nginx.conf
deployment/postgres/init/: 01-init.sql
deployment/qdrant/: config.yaml
deployment/security/: .trivyignore  bandit.conf  eslint-security.conf
docs/: DEPLOY.md  EXECUTION_ROADMAP.md  README.md  SECRETS_MANAGEMENT.md  index.md  openapi.json  openapi.yaml  quick-start.md
docs/volume-1/: 01-vision-mission-business-goals.md
docs/volume-10/: 01-security-architecture.md
docs/volume-11/: 01-devops-deployment.md
docs/volume-12/: 01-testing-strategy.md
docs/volume-13/: 01-plugin-marketplace-sdk.md
docs/volume-14/: 01-operations-manual.md
docs/volume-15/: 01-product-roadmap.md
docs/volume-2/: 01-prd.md
docs/volume-3/: 01-srs.md
docs/volume-4/: 01-system-architecture.md
docs/volume-5/: 01-database-design.md
docs/volume-6/: 01-api-specification.md
docs/volume-7/: 01-frontend-design-system.md
docs/volume-8/: 01-ai-architecture.md
docs/volume-9/: 01-workflow-automation.md
helm/aegis/: Chart.yaml  values.yaml
helm/aegis/templates/: deployment.yaml  service.yaml
infra/compose/grafana/alerting/: alert-rules.yml  notifications.yaml
infra/compose/grafana/dashboards/: ai-cost.json  dashboards.yml
infra/compose/grafana/datasources/: datasources.yml
infra/compose/grafana/notifications/: notifications.yaml
infra/compose/loki/: loki-config.yml
infra/compose/postgres/init/: 01-bootstrap.sql  01-create-app-db.sql
infra/compose/prometheus/: prometheus.yml
infra/compose/promtail/: promtail-config.yml
infra/compose/vault/: docker-compose.yml
infra/terraform/environments/dev/: .gitkeep
n8n-templates/: README.md  campaign-report.json  contact-sync.json  lead-scoring.json  social-scheduler.json  support-ticket.json
scripts/: ci-dependency-audit.sh  ci-security-scan.sh  ci-validate.py  dev.sh  generate-openapi.py  migrate_env_to_vault.py  reset-db.sh  run_tests_windows.sh  seed-dev.sh  validate-env.sh
src/backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
src/backend/alembic/: env.py  script.py.mako
src/backend/alembic/versions/: 0001_initial_schema.py  0002_security_rls_audit_domain_tables.py  0003_email_delivery_tables.py  0004_fulltext_search_tsvector.py  0005_add_custom_field_definitions.py  0006_add_lead_score_fields.py  0007_remaining_domain_tables.py
src/backend/app/: __init__.py  config.py  database.py  main.py  vault.py
src/backend/app/api/: deps.py
src/backend/app/api/graphql/: schema.py
src/backend/app/api/v1/: __init__.py  admin.py  ai.py  analytics.py  auth.py  billing.py  crm.py  email.py  gdpr.py  health.py  knowledge.py  knowledge_base.py  marketing.py  marketplace.py  media.py  notifications.py  search.py  seo.py  social.py  tenants.py  webhooks.py  workflows.py  ws.py
src/backend/app/core/: agent_orchestrator.py  api_version.py  audit_logger.py  config_validator.py  csp.py  exceptions.py  feature_flags.py  file_validator.py  keys.py  magic_bytes.py  metrics.py  metrics_middleware.py  middleware.py  notification_service.py  search_indexer.py  security.py  sso.py  websocket.py
src/backend/app/models/: __init__.py  ai.py  analytics.py  auth.py  base.py  billing.py  crm.py  email.py  marketing.py  marketplace.py  media.py  notifications.py  seo.py  social.py  tenant.py  webhooks.py
src/backend/app/schemas/: __init__.py  ai.py  analytics.py  auth.py  base.py  billing.py  crm.py  email.py  feature_flags.py  knowledge.py  knowledge_base.py  marketing.py  marketplace.py  media.py  notifications.py  search.py  seo.py  social.py  sso.py  tenant.py  webhooks.py
src/backend/app/services/: __init__.py  ai_service.py  analytics.py  auth.py  base.py  billing.py  crm.py  email_service.py  knowledge_base.py  knowledge_service.py  marketing.py  marketplace.py  media.py  notifications.py  search_service.py  seo.py  social.py  tenant.py  webhooks.py  workflows.py
src/backend/app/tasks/: __init__.py  ai.py  email.py  knowledge_indexing.py  reports.py  webhook_delivery.py  workflows.py
src/backend/app/tests/: conftest.py
src/backend/scripts/: entrypoint.sh  seed.py
src/backend/tests/: conftest.py  test_ai.py  test_analytics.py  test_auth.py  test_billing.py  test_crm.py  test_email.py  test_health.py  test_knowledge.py  test_media.py  test_search.py  test_tenant.py  test_webhooks.py
src/backend/tests/factories/: __init__.py  ai.py  analytics.py  auth.py  billing.py  crm.py  email.py  marketing.py  media.py  tenant.py  webhooks.py
src/frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
src/frontend/e2e/: auth.setup.ts  playwright.config.ts
src/frontend/e2e/specs/: ai-suite.spec.ts  billing-flow.spec.ts  crm-contacts.spec.ts  dashboard.spec.ts  login.spec.ts  media-upload.spec.ts  navigation.spec.ts  webhook-management.spec.ts
src/frontend/public/: manifest.json  sw.js
src/frontend/src/app/: globals.css  layout.tsx  page.tsx
src/frontend/src/app/(dashboard)/: layout.tsx
src/frontend/src/app/offline/: page.tsx
src/frontend/src/components/: providers.tsx  pwa-registration.tsx
src/frontend/src/components/atoms/: badge.tsx  button.tsx  index.ts  tooltip.tsx
src/frontend/src/hooks/: use-contacts.ts  use-custom-fields.ts  use-deals.ts  use-notifications.ts  use-workspaces.ts
src/frontend/src/lib/: api.ts  auth.ts  index.ts  utils.ts
src/frontend/src/stores/: auth-store.ts  workspace-store.ts
src/frontend/src/test/: setup.ts
src/frontend/src/types/: index.ts
(+64 files in other folders)
