[project]
name = "aegis-marketing-cloud"
version = "0.1.0"
description = "AI-Native Digital Marketing Operating System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "strawberry-graphql[fastapi]>=0.237.0",
    "qdrant-client>=1.10.0",
    "minio>=7.2.0",
    "aio-pika>=9.4.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "celery>=5.4.0",
    "flower>=2.0.0",
    "prometheus-client>=0.20.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "sentry-sdk>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.0.0",
    "faker>=28.0.0",
    "factory-boy>=3.3.0",
    "respx>=0.21.0",
    "coverage>=7.0.0",
]
prod = [
    "gunicorn>=23.0.0",
    "python-json-logger>=2.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "T20", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["migrations", "tests"]

[tool.pytest.ini_options]
testpaths = ["backend/app/tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"
