[project]
name = "aegis-marketing-cloud"
version = "1.0.0"
description = "AI-Native Digital Marketing Operating System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "strawberry-graphql[fastapi]>=0.237.0",
    "qdrant-client>=1.10.0",
    "minio>=7.2.0",
    "aio-pika>=9.4.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "celery>=5.4.0",
    "flower>=2.0.0",
    "prometheus-client>=0.20.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "sentry-sdk>=2.0.0",
    "hvac>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "asgi_lifespan>=1.3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.0.0",
    "faker>=28.0.0",
    "factory-boy>=3.3.0",
    "respx>=0.21.0",
    "coverage>=7.0.0",
]
prod = [
    "gunicorn>=23.0.0",
    "python-json-logger>=2.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "T20", "RUF"]
ignore = [
    # FastAPI requires Depends() and Query() as default args — B008 is a false positive here
    "B008",
    # FastAPI route handlers accept Depends parameters that may be unused in the
    # function body but are required by DI — these are false positives
    "ARG001",
    "ARG002",
    "ARG003",
    # Line length isn't strictly enforced — the codebase has intentional
    # longer lines (URLs, SQL queries, long strings)
    "E501",
    # Ambiguous unicode characters in comments/docstrings — these are intentional
    # typographic dashes in prose, not security concerns
    "RUF001",
    "RUF002",
    "RUF003",
    # We intentionally use Generic[T] over PEP 695 syntax for Python 3.11
    # compatibility (the production Dockerfile uses 3.12, but local dev is 3.11)
    "UP046",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20", "F811", "F841", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["migrations", "tests"]

[[tool.mypy.overrides]]
module = "app.schemas.marketing"
# dict/list type args are verbose and not required with `from __future__ import annotations`
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.core.magic_bytes"
# Uses callable[...] syntax that mypy doesn't support for decorated functions
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.core.security"
# jose, passlib stubs + crypto type hierarchy
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.core.sso"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.core.websocket"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.core.keys"
# cryptography type hierarchy is complex; runtime type narrowing is correct
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.core.file_validator"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.core.search_indexer"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.core.csp"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.core.metrics_middleware"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.core.middleware"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.core.exceptions"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.core.agent_orchestrator"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.config"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.core.middleware"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.core.websocket"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.core.notification_service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.schemas.base"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["src/backend/tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"
