[project]
name = "aegis-marketing-cloud"
version = "0.1.0"
description = "Aegis Marketing Cloud — Multi-tenant SaaS Marketing Platform"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Aegis Marketing Cloud" }]

dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "uuid6>=2024.7.10",
    "strawberry-graphql[fastapi]>=0.235.0",
    "prometheus-client>=0.21.0",
    "minio>=7.2.0",
    "Pillow>=10.0.0",
    "qdrant-client>=1.9.0",
    "authlib>=1.3.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "factory_boy>=3.3.0",
    "Faker>=22.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["app"]
omit = ["*/alembic/*", "*tests*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
