[project]
name = "aegis-marketing-cloud"
version = "1.0.0"
description = "Aegis Marketing Cloud — Multi-tenant SaaS Marketing Platform"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Aegis Marketing Cloud" }]

dependencies = [
    # ─── Web framework ────────────────────────────────────────
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "strawberry-graphql[fastapi]>=0.237.0",
    "python-multipart>=0.0.12",

    # ─── Database ─────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "qdrant-client>=1.10.0",
    "minio>=7.2.0",

    # ─── Validation ───────────────────────────────────────────
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",

    # ─── Auth / Security ──────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0,<5.0.0",
    "authlib>=1.3.0",
    "hvac>=2.0.0",
    "slowapi>=0.1.9",

    # ─── Async / Message Queue ────────────────────────────────
    "httpx>=0.27.0",
    "aio-pika>=9.4.0",

    # ─── Task Queue ───────────────────────────────────────────
    "celery>=5.4.0",
    "flower>=2.0.0",

    # ─── Observability ────────────────────────────────────────
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "sentry-sdk>=2.0.0",

    # ─── Media & Files ────────────────────────────────────────
    "Pillow>=10.0.0",

    # ─── Utilities ────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "uuid6>=2024.7.10",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2.0",
]
email = [
    "aiosmtplib>=3.0.0",
    "boto3>=1.34.0",
    "Jinja2>=3.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory_boy>=3.3.0",
    "Faker>=22.0.0",
    "asgi_lifespan>=0.4.0",
    "respx>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "ANN",  # annotations
    "ARG",  # unused arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "EM",   # flake8-errmsg
    "G",    # flake8-logging-format
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "NPY",  # NumPy-specific rules
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "YTT",  # flake8-2020
]
ignore = [
    "ANN101",  # missing-type-self (redundant with py311)
    "ANN102",  # missing-type-cls (redundant with py311)
    "ANN401",  # dynamically typed expressions
    "S101",    # allow assert in tests
    "SLF001",  # allow private member access
    "D",       # pydocstyle (handled separately)
    "E501",    # line length (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "ARG", "S", "T20"]
"app/alembic/*" = ["ANN", "ARG", "S", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.pytest]
parametrize-names-type = "csv"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_reexport = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests/*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["app"]
omit = ["*/alembic/*", "*tests*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
